--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
             <!-- Пример карточек достопримечательностей -->
             <!-- Комментарий: Заменить ссылки на реальные фото достопримечательностей. -->
             <div class="attraction-card card hover-zoom" data-type="natural">
-                <img src="C:\Users\РГСУ admin\Downloads\5386681458351008428.jpg" alt="Гора Машук">
+                <img src="\пятигорск тур\Мшук.jpg" alt="Гора Машук">
                 <h3>Гора Машук</h3>
                 <p>Горная вершина, откуда открывается панорамный вид на город и окрестности.</p>
                 <p class="info">Часы работы: круглосуточно<br>Билеты: подъем на канатной дороге ~300 руб.<br>Адрес: центр города</p>
