--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
             <!-- Пример карточек достопримечательностей -->
             <!-- Комментарий: Заменить ссылки на реальные фото достопримечательностей. -->
             <div class="attraction-card card hover-zoom" data-type="natural">
-                <img src="https://github.com/0AvoKadka0/Pyatigorsk/blob/main/%D0%BF%D1%8F%D1%82%D0%B8%D0%B3%D0%BE%D1%80%D1%81%D0%BA%20%D1%82%D1%83%D1%80/%D0%9C%D1%88%D1%83%D0%BA.jpg" alt="Гора Машук">
+                <img src="https://github.com/0AvoKadka0/Pyatigorsk/blob/main/Mashuk.jpg?raw=true" alt="Гора Машук">
                 <h3>Гора Машук</h3>
                 <p>Горная вершина, откуда открывается панорамный вид на город и окрестности.</p>
                 <p class="info">Часы работы: круглосуточно<br>Билеты: подъем на канатной дороге ~300 руб.<br>Адрес: центр города</p>
