--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             font-size: 16px;
             line-height: 1.6;
             color: #2D2D2D;
-            background: #FFFFFF;
+            background: #e7e7e7;
         }
 
         img {
@@ -65,12 +65,12 @@
             --secondary-color: #FFD700;
             --accent-color1: #00BFFF;
             --accent-color2: #FF6347;
-            --light-bg: #F5F5F5;
-            --white: #FFFFFF;
+            --light-bg: #dfdfdf;
+            --white: #cfc9c9;
             --dark-text: #2D2D2D;
             --medium-text: #555555;
             --fooder--: #dddddd;
-            --border-color: #E0E0E0;
+            --border-color: #dbdbdb;
             --transition-speed: 0.3s;
         }
 
@@ -584,7 +584,6 @@
         }
 
         .faq__item h3::after {
-            content: "\f078"; /* Font Awesome chevron-down */
             font-family: "Font Awesome 6 Free";
             font-weight: 900;
             position: absolute;
